# prog-rust-2nd-ws

./: Cargo.toml  file1.txt  file2.txt  file3.txt  foo.txt  hello.sh
build_server/: Cargo.toml
build_server/src/: main.rs
ch01/src/: first.rs  main.rs
ch02/src/: main.rs
ch03_fundamentals/: Cargo.toml
ch04_ownership/src/: copy_types.rs  main.rs  moves.rs  rc_arc.rs
ch05_references/: Cargo.toml
ch05_references/src/: main.rs  reference_safety.rs  reference_to_value.rs  sharing_vs_mutation.rs  smart_pointers.rs  working_with_references.rs
ch06_expressions/: Cargo.toml
ch07_errors/: Cargo.toml
ch07_errors/src/: main.rs  panics.rs  result1.rs  results.rs
ch08_crates_modules/: Cargo.toml
ch09_structs/: Cargo.toml
ch09_structs/src/: associated_const.rs  derive_traits_structs.rs  generic_const_structs.rs  generic_structs.rs  lifetime_structs.rs  main.rs  method_impl.rs  method_structs.rs  named_structs.rs  structs_book.rs  tuple_structs.rs  unit_structs.rs
ch10_enums_and_patterns/: Cargo.toml
ch10_enums_and_patterns/src/: enums.rs  enums_book.rs  enums_option.rs  iflet.rs  main.rs  matchs_book.rs  patterns.rs
ch11_traits_and_generics/: Cargo.toml
ch12_overloading/: Cargo.toml
ch13_utility_traits/: Cargo.toml
ch14_closures/: Cargo.toml
ch15_iterators/: Cargo.toml
ch16_collections/: Cargo.toml
ch17_strings/: Cargo.toml
ch18_io/: Cargo.toml
ch19_concurrency/: Cargo.toml
ch20_async/: Cargo.toml
ch21_macros/: Cargo.toml
ch22_unsafe_code/: Cargo.toml
ch23_foreign_functions/: Cargo.toml
prog-rust-2nd-ws/: README.md
(+57 files in other folders)
